<resources>
    <string name="app_name">MyApp</string>
    <string name="tv_title">Music App</string>

    <string name="sign_up">Don\'t have an account? Register</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_register">Register</string>
    <string name="hint_password_again">Re-enter your password</string>

    //play song
    <string name="imgbtn_content">img</string>
    <string name="label_start_time">00:00</string>
    <string name="label_imgbutton">imgbutton</string>
    <string name="btn_play_all">Phát tất cả</string>

    //item
    <string name="text_artist_name">Artist Name</string>
    <string name="text_song_name">Song Name</string>
    <string name="desc_image_avatar">Image Song</string>
    <string name="my_playlist">My Playlist</string>

    //home
    <string name="sign_out">Sign out</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="play_list">Playlists</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="history_songs">History Songs</string>
    <string name="home">Home</string>
    <string name="hint_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    //add playlist
    <string name="btn_add">Thêm Playlist</string>
    <string name="no_song">Không có bài hát</string>
    <string name="hint_playlist_name">Nhập tên Playlist</string>
    <string name="tv_playlist_name">Tên Playlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favorite">add_favorite</string>
    <string name="add_to_playlist">Add to Playlist</string>
</resources>