<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_song"
            android:layout_width="97dp"
            android:layout_height="78dp"
            android:contentDescription="@string/imgbtn_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_no_available"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_song_name"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_song"
            app:layout_constraintTop_toTopOf="@id/img_song"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_artist_name"
            app:layout_constraintStart_toEndOf="@id/img_song"
            app:layout_constraintTop_toBottomOf="@id/tv_song_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/label_start_time"
            app:layout_constraintStart_toEndOf="@id/img_song"
            app:layout_constraintTop_toBottomOf="@id/tv_artist_name"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
