<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown148">


    <Button
        android:id="@+id/btn_home"
        android:layout_width="0dp"
        android:layout_height="@dimen/define_dimen_56"
        android:layout_marginTop="@dimen/define_dimen_120"
        android:backgroundTint="@color/brown148"
        android:text="@string/home"
        android:textColor="#000000"
        android:drawableStart="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/include_top_layout"
        tools:ignore="VisualLintButtonSize" />


    <Button
        android:id="@+id/btn_historysongs"
        android:layout_width="0dp"
        android:layout_height="@dimen/define_dimen_56"
        android:backgroundTint="@color/brown148"
        android:text="@string/history_songs"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:drawableStart="@drawable/ic_history"
        app:layout_constraintEnd_toEndOf="@+id/btn_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_home"
        app:layout_constraintTop_toBottomOf="@+id/btn_home"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_playlist"
        android:layout_width="0dp"
        android:layout_height="@dimen/define_dimen_56"
        android:backgroundTint="@color/brown148"
        android:text="@string/play_list"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:drawableStart="@drawable/ic_music_note"
        app:layout_constraintEnd_toEndOf="@+id/btn_historysongs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_historysongs"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_favoritesongs"
        android:layout_width="0dp"
        android:layout_height="@dimen/define_dimen_56"
        android:backgroundTint="@color/brown148"
        android:text="@string/favorite_songs"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:drawableStart="@drawable/ic_add_favorite"
        app:layout_constraintEnd_toEndOf="@id/btn_playlist"
        app:layout_constraintStart_toStartOf="@+id/btn_playlist"
        app:layout_constraintTop_toBottomOf="@+id/btn_playlist"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="0dp"
        android:layout_height="@dimen/define_dimen_56"
        android:backgroundTint="@color/brown148"
        android:text="@string/sign_out"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:drawableStart="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="@id/btn_favoritesongs"
        app:layout_constraintStart_toStartOf="@+id/btn_favoritesongs"
        app:layout_constraintTop_toBottomOf="@+id/btn_favoritesongs"
        tools:ignore="VisualLintButtonSize" />

    <include
        android:id="@+id/include_top_layout"
        layout="@layout/layout_top_interface"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_home"
        app:layout_constraintEnd_toEndOf="@id/btn_home"
        app:layout_constraintStart_toStartOf="@id/btn_home"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>