<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_history_songs"
        android:layout_width="392dp"
        android:layout_height="673dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_all"
        tools:ignore="SpeakableTextPresentCheck"
        tools:listitem="@layout/item_song" />

    <TextView
        android:id="@+id/ic_fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_songs"
        android:textSize="@dimen/define_dimen_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_play_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="SpUsage,TextSizeCheck" />

    <ImageButton
        android:id="@+id/imgbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imgbtn_content"
        app:layout_constraintBottom_toTopOf="@+id/rc_history_songs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_play_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/btn_play_all"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

