<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@android:color/white"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="726dp"
        tools:ignore="RedundantNamespace">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_favorits_songs"
            android:layout_width="398dp"
            android:layout_height="611dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_play_all"
            tools:ignore="SpeakableTextPresentCheck"
            tools:listitem="@layout/item_favorite_songs" />

        <TextView
            android:id="@+id/ic_fragment_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_songs"
            android:textSize="@dimen/define_dimen_24"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/btn_play_all"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.421"
            card_view:layout_constraintStart_toEndOf="@+id/imgbtn_back"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.666"
            tools:ignore="SpUsage,TextSizeCheck" />

        <ImageButton
            android:id="@+id/imgbtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/imgbtn_content"
            card_view:layout_constraintBottom_toTopOf="@+id/rc_favorits_songs"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.19"
            card_view:srcCompat="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_play_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/purple_200"
            android:text="@string/btn_play_all"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.498"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
