<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="359dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_corner"
        android:gravity="center"
        android:hint="@string/hint_search"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imgbtn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imgbtn_content"
        app:layout_constraintBottom_toBottomOf="@id/edt_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edt_search"
        app:srcCompat="@drawable/ic_search"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imgbtn_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imgbtn_content"
        app:layout_constraintBottom_toBottomOf="@+id/edt_search"
        app:layout_constraintEnd_toStartOf="@+id/edt_search"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_search"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/ic_menu"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_popular_songs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/popular_songs"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgbtn_menu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_popular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_popular_songs"
        tools:ignore="SpeakableTextPresentCheck"
        tools:listitem="@layout/item_song" />

</androidx.constraintlayout.widget.ConstraintLayout>
